# jira2solidtime

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .secrets.baseline  .yamllint.yml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  config.json.example  debug_solidtime_sync.py  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  generate-alertmanager-config.sh  pyproject.toml  rebuild.sh
.claude/: CLAUDE.md  ERKENNTNISSE_ALTE_VERSION.md  context.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
compose/: docker-compose.app.yml  docker-compose.dev.yml
config/: defaults.yaml  mapping_rules.yaml
data/: worklog_mapping.json
docker/: Dockerfile.app
docs/: configuration.md  deployment-azure.md  deployment-local.md
examples/: docker-compose.prod.yml
examples/terraform/azure-app-service/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitoring/alertmanager/: .gitignore  alertmanager.template.yml  generate-config.sh
monitoring/alertmanager/templates/: teams.tmpl  telegram.tmpl
monitoring/grafana/dashboards/: jira2solidtime-dashboard.json
monitoring/prometheus/: alert_rules.yml  alert_rules.yml.template  prometheus.yml
scripts/: generate-alert-rules.sh  prepare-docker.sh  release.sh  update-monitoring-config.sh
src/jira2solidtime/: __init__.py  __version__.py  config.py  daemon.py  history.py  main.py
src/jira2solidtime/api/: jira_client.py  solidtime_client.py  tempo_client.py
src/jira2solidtime/cli/: __init__.py  progress.py
src/jira2solidtime/config/: __init__.py  database.py  manager.py
src/jira2solidtime/domain/: models.py
src/jira2solidtime/factories/: __init__.py  client_factory.py
src/jira2solidtime/mapping/: __init__.py  field_mapper.py
src/jira2solidtime/monitoring/: health_check.py  metrics_exporter.py  metrics_server.py
src/jira2solidtime/services/: sync_service.py
src/jira2solidtime/sync/: __init__.py  issue_comparator.py  mapper.py  syncer.py  worklog_mapping.py
src/jira2solidtime/utils/: date_parser.py  logging.py  worklog_mapping.py
src/jira2solidtime/web/: __init__.py  app.py  service.py
src/jira2solidtime/web/templates/: index.html
tests/unit/: test_issue_comparator.py  test_sync_service.py
