[project]
name = "jira2solidtime"
dynamic = ["version"]
description = "Synchronize time tracking data from Jira Tempo to Solidtime"
authors = [
    {name = "Fred Thiele", email = "fred.thiele@cdds.se"},
]
dependencies = [
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "flask>=3.0.0",
]
requires-python = ">=3.11"

readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["jira", "tempo", "solidtime", "time-tracking", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
jira2solidtime = "jira2solidtime.main:main"
j2s = "jira2solidtime.main:main"

[project.urls]
Homepage = "https://github.com/cdds-ab/jira2solidtime"

[tool.hatch.build.targets.wheel]
packages = ["src/jira2solidtime"]
Repository = "https://github.com/cdds-ab/jira2solidtime.git"
Issues = "https://github.com/cdds-ab/jira2solidtime/issues"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0.0",
    "bandit[toml]>=1.8.6",
    "detect-secrets>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/jira2solidtime/__version__.py"

[tool.mypy]
python_version = "3.11"
packages = ["src/jira2solidtime"]
strict = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S104",  # binding to 0.0.0.0 is intentional for Docker
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "tests",
]

[tool.ruff.lint.isort]
known-first-party = ["jira2solidtime"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert_used in tests
severity = "medium"
